--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,11 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "lucide-react": "^0.469.0",
     "postcss": "^8.4.49",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.17"
@@ -20,6 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": [
       "react-app",
